# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  test_load.py
.github/workflows/: my_workflow.yml  pyci.yml
gendiff/: __init__.py  diff_calculator.py  diff_representation.py  diff_viewer.py  generate_diff.py  utils.py
gendiff/formatters/: format_id.py  plain.py  stylish.py
gendiff/scripts/: diff_representation.py  find_diff.py  gendiff.py  generate_diff.py  parser.py  utils.py
tests/: test_generate_diff.py
tests/test_data/: file1.json  file1.yml  file2.json  file2.yml  pending_stylish.txt
