[project]
name = "gendiff"
version = "0.1.1"
description = ""
authors = [
    { name = "HidTired", email = "Dentanyabonya@mail.ru" }
    ]
readme = "README.md"
packages = [
    { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.0"
flake8 = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["*/tests/*"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

