[project]
authors = [
    {name = "HidTired", email = "DenTanyaBonya@mail.ru"},
]
name = "hexlet-code"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest-cov>=6.1.1",
    "PyYAML>=6.0.2",
]

[tool.poetry.dependency-groups.dev]
ruff = "==0.7.1"
pytest = ">=8.3.3"
pytest-cov = ">=5.0.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"