[project]
authors = [
    {name = "HidTired", email = "DenTanyaBonya@mail.ru"},
]
name = "hexlet-code"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest-cov>=6.1.1",
    "PyYAML>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]



[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"